<resources>
    <string name="app_name">RapGeneratorAI</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="onboarding_first_title">Infinite Lyric Possibilites Await </string>
    <string name="onboarding_first_content">Generate unique rap verses with ease, and let your friends marvel at your lyrical creativity.</string>
    <string name="next_button">Next</string>
    <string name="onboarding_second_title">Choose Your Dream Rap Rapper</string>
    <string name="onboarding_second_content">Select your favorite rap artist to perform your custom lyrics, making your friends envious of your star collaboration.</string>
    <string name="onboarding_third_title">Find Your Perfect Beat Match</string>
    <string name="onboarding_third_content">Explore diverse beats to complement your lyrics, producing catchy tracks that get your friends grooving.</string>
    <string name="onboarding_fourth_title">Share Your Rap Flair, Ignite Social Media</string>
    <string name="onboarding_fourth_content">Showcase your original rap creations on social media, captivating friends and followers with your undeniable talent.</string>
    <string name="home_start_text">Start Here</string>
    <string name="home_generate_text">Generate a rap song</string>
    <string name="home_screen_title">Rap Generator</string>
    <string name="prompt_screen_title">Prompt</string>
    <string name="prompt_screen_hint">Type your prompts</string>
    <string name="dummy_prompt">A diss about my friend Jamie who is spending too much time with his dog</string>
    <string name="button_continue">Continue</string>
    <string name="generating_lyrics_title">Generating Lyrics</string>
    <string name="generating_lyrics_info">Just a little while...</string>
    <string name="generating_lyrics_processing">Processing</string>
    <string name="edit_lyrics_title">Edit Lyrics</string>
    <string name="save_button">Save</string>
    <string name="beat_screen_title">Select Beat</string>
    <string name="rapper_screen_title">Rapper</string>
    <string name="generating_rap_title">Generating Song</string>
    <string name="generating_rap_description">Please wait while we are generating your song</string>
    <string name="terms_of_use">Terms of Use</string>
    <string name="contact_us">Contact Us</string>
    <string name="privacy_policy">Privacy Policy</string>
    <string name="restore_purchase">Restore Purchase</string>
    <string name="help_text">Help</string>
    <string name="settings_screen_title">Settings</string>
</resources>